# flutter_llama

./: CHANGELOG.md  CHANGES_LAZY_LOADING.md  HUGGINGFACE_DOWNLOAD.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SIMPLE.md  LAZY_LOADING.md  LICENSE  LLAMA_CPP_FIXED.md  LLAMA_CPP_INTEGRATION_COMPLETE.md  LLAMA_CPP_VERSION  Makefile  PLUGIN_ARCHITECTURE.md  QUICK_START_LAZY_LOADING.md  README.md  README_RU.md  SOLUTION_SUMMARY.md  convert_to_gguf.py  pubspec.yaml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  flutter_llama_bridge.cpp
android/src/main/kotlin/com/example/flutter_llama/: FlutterLlamaPlugin.kt
android/src/main/kotlin/net/nativemind/flutter_llama/: FlutterLlamaPlugin.kt
example/: QUICK_USAGE_HUGGINGFACE.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: model_loading_test.dart  ollama_integration_test.dart  plugin_integration_test.dart  streaming_generation_test.dart  text_generation_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  multimodal_demo.dart  multimodal_example.dart
example/lib/demo/: huggingface_download_demo.dart  test_generation_demo.dart
example/lib/screens/: model_manager_screen.dart  model_picker_screen.dart  model_test_screen.dart
example/lib/services/: model_downloader.dart
example/lib/utils/: model_downloader.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: model_downloader_test.dart  widget_test.dart
ios/: flutter_llama.podspec
ios/Classes/: FlutterLlamaPlugin.swift  llama_cpp_bridge.mm
ios/llama.xcframework/: Info.plist
ios/llama.xcframework/ios-arm64/llama.framework/: llama
ios/llama.xcframework/tvos-arm64/llama.framework/: llama
ios/llama.xcframework/xros-arm64/llama.framework/: llama
lib/: flutter_llama.dart  flutter_llama_method_channel.dart  flutter_llama_platform_interface.dart
lib/src/: flutter_llama.dart  flutter_llama_multimodal.dart
lib/src/models/: generation_params.dart  llama_config.dart  llama_response.dart  model_source.dart  multimodal_config.dart  multimodal_input.dart  multimodal_response.dart  preset_model.dart
lib/src/services/: huggingface_downloader.dart  model_manager.dart  ollama_downloader.dart
macos/: flutter_llama.podspec
macos/Classes/: FlutterLlamaPlugin.swift  flutter_llama_umbrella.h  llama_cpp_bridge.h  llama_cpp_bridge.mm
scripts/: merge_model.py  run_demo.sh  run_tests.sh
test/: README.md  flutter_llama_comprehensive_test.dart  flutter_llama_method_channel_test.dart  flutter_llama_test.dart
test/helpers/: ollama_model_downloader.dart
test/models/: generation_params_test.dart  llama_config_test.dart  llama_response_test.dart
(+2 files in other folders)
